--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -111,7 +111,7 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav side-nav">
             <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
-                <a ng-hide="item.auth && !isLoggedIn()" ng-href="{{item.link}}"><i class="fa fa-fw fa-{{item.icon}}"></i> {{item.title}}</a>
+                <a ng-hide="item.auth && !isLoggedIn() || item.admin && !isAdmin()" ng-href="{{item.link}}"><i class="fa fa-fw fa-{{item.icon}}"></i> {{item.title}}</a>
             </li>
             <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin"><i class="fa fa-fw fa-dashboard"></i> Admin</a></li>
         </ul>
